# qtcreator-plugin-discord-presence

./: .editorconfig  .gitignore  CMakeLists.txt  DISCORD_RPC_PLUGIN_GUIDE.md  DiscordRPCPlugin.json  README.md  discordrpcplugin.cpp  discordrpcplugin.h
docs/: BUILD_GUIDE_LINUX.md  BUILD_GUIDE_WINDOWS.md  QUICK_REFERENCE.md
src/: DiscordRPCPlugin.json  discordrpcconstants.h  discordrpcmanager.cpp  discordrpcmanager.h
